# power-automate-architect

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  GEMINI.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.agents/skills/pa-actualizar/: SKILL.md
.agents/skills/pa-auditoria/: SKILL.md
.agents/skills/pa-conectado/: SKILL.md
.agents/skills/pa-copiloto/: SKILL.md
.agents/skills/pa-copiloto/plantillas/: alerta-programada.json
.agents/skills/pa-flujos/: SKILL.md
.claude-plugin/: marketplace.json  plugin.json
ejemplos/: README.md
evals/: verificar_auditor.py  verificar_conector.py  verificar_docs.py  verificar_mcp.py
evals/flujos/: flujo-agente-ia.json  flujo-con-fallas.json  flujo-dataverse.json  flujo-http-esperas.json  flujo-limpio.json
mcpb/: README.md  manifest.json
references/: api-conexion.md  buenas-practicas.md  contrato-agente.md  estado-fuentes.json  ia-en-flujos.md  nota-ti-flowstudio.md  panorama-herramientas.md  reglas-candidatas.md
scripts/: actualizar_catalogo.py  auditar_flujo.py  pa_api.py  pa_mcp.py  sincronizar_skills.py
skills/pa-actualizar/: SKILL.md
skills/pa-auditoria/: SKILL.md
skills/pa-conectado/: SKILL.md
skills/pa-copiloto/: SKILL.md
skills/pa-copiloto/plantillas/: _plan-de-flujo.md  aprobacion.json  ia-clasificar.json
skills/pa-flujos/: SKILL.md
