[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pa-architect-mcp"
version = "0.7.0"
description = "Auditor y copiloto local de Power Automate (servidor MCP + CLI): audita, lista, modifica y crea cloud flows con las mejores practicas de Microsoft. Local-first: solo habla con APIs de Microsoft usando tu propio login."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["power-automate", "mcp", "auditoria", "power-platform", "cloud-flows"]
dependencies = [
    "mcp>=1.20",
    "msal>=1.30",
    "msal-extensions>=1.2",
    "requests>=2.31",
]

[project.scripts]
pa-architect-mcp = "pa_mcp:main"

[tool.setuptools]
package-dir = { "" = "scripts" }
py-modules = ["pa_mcp", "pa_api", "auditar_flujo"]
